crates/pg_syntax/tests/snapshots/postgres_regress/incremental_sort@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index on t (a);
---
IndexStmt@0..22
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  On@13..15 "on"
  Whitespace@15..16 " "
  RangeVar@16..17
    Ident@16..17 "t"
  Whitespace@17..18 " "
  Ascii40@18..19 "("
  IndexElem@19..20
    Ident@19..20 "a"
  Ascii41@20..21 ")"
  Ascii59@21..22 ";"

