crates/pg_syntax/tests/snapshots/postgres_regress/incremental_sort@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create or replace function explain_analyze_inc_sort_nodes_without_memory(query text)\nreturns jsonb language plpgsql\nas\n$$\ndeclare\n  nodes jsonb := '[]'::jsonb;\n  node jsonb;\n  group_key text;\n  space_key text;\nbegin\n  for node in select * from jsonb_array_elements(explain_analyze_inc_sort_nodes(query)) t loop\n    for group_key in select unnest(array['Full-sort Groups', 'Pre-sorted Groups']::text[]) t loop\n      for space_key in select unnest(array['Sort Space Memory', 'Sort Space Disk']::text[]) t loop\n        node := jsonb_set(node, array[group_key, space_key, 'Average Sort Space Used'], '\"NN\"', false);\n        node := jsonb_set(node, array[group_key, space_key, 'Peak Sort Space Used'], '\"NN\"', false);\n      end loop;\n    end loop;\n    nodes := nodes || node;\n  end loop;\n  return nodes;\nend;\n$$;"
---
CreateFunctionStmt@0..807
  Create@0..6 "create"
  Whitespace@6..7 " "
  Or@7..9 "or"
  Whitespace@9..10 " "
  Replace@10..17 "replace"
  Whitespace@17..18 " "
  Function@18..26 "function"
  Whitespace@26..27 " "
  Ident@27..72 "explain_analyze_inc_s ..."
  Ascii40@72..73 "("
  FunctionParameter@73..83
    Ident@73..78 "query"
    Whitespace@78..79 " "
    TypeName@79..83
      TextP@79..83 "text"
  Ascii41@83..84 ")"
  Newline@84..85 "\n"
  Returns@85..92 "returns"
  Whitespace@92..93 " "
  TypeName@93..98
    Ident@93..98 "jsonb"
  Whitespace@98..99 " "
  DefElem@99..115
    Language@99..107 "language"
    Whitespace@107..108 " "
    Ident@108..115 "plpgsql"
  Newline@115..116 "\n"
  DefElem@116..806
    As@116..118 "as"
    Newline@118..119 "\n"
    List@119..806
      Sconst@119..806 "$$\ndeclare\n  nodes js ..."
  Ascii59@806..807 ";"

