crates/pg_syntax/tests/snapshots/postgres_regress/inet@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('10.1.2.3', '10.1.2.3/32');"
---
InsertStmt@0..63
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..61
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..61
      AConst@36..46
        Sconst@36..46 "'10.1.2.3'"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      AConst@48..61
        Sconst@48..61 "'10.1.2.3/32'"
  Ascii41@61..62 ")"
  Ascii59@62..63 ";"

