crates/pg_syntax/tests/snapshots/postgres_regress/inet@12.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('10.1.2', '10.1.2.3/24');"
---
InsertStmt@0..61
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..59
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..59
      AConst@36..44
        Sconst@36..44 "'10.1.2'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..59
        Sconst@46..59 "'10.1.2.3/24'"
  Ascii41@59..60 ")"
  Ascii59@60..61 ";"

