crates/pg_syntax/tests/snapshots/postgres_regress/inet@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('10', '11.1.2.3/8');"
---
InsertStmt@0..56
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..54
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..54
      AConst@36..40
        Sconst@36..40 "'10'"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..54
        Sconst@42..54 "'11.1.2.3/8'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

