crates/pg_syntax/tests/snapshots/postgres_regress/inet@18.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('10:23::8000/113', '10:23::ffff');"
---
InsertStmt@0..70
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..68
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..68
      AConst@36..53
        Sconst@36..53 "'10:23::8000/113'"
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..68
        Sconst@55..68 "'10:23::ffff'"
  Ascii41@68..69 ")"
  Ascii59@69..70 ";"

